[tool.poetry]
name = "mockify"
version = "0.13.1"
description = "Highly customizable and expressive mocking library for Python."
authors = ["Maciej Wiatrzyk <maciej.wiatrzyk@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.6"


[tool.poetry.group.dev.dependencies]
invoke = "^2.2.0"
pytest = "^8.1.1"
pytest-asyncio = "^0.23.6"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
